<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.4.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.dobatii.gwork</groupId>
	<artifactId>dummymodernjava</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>demo</name>
	<description>General dummy modern java application development with Spring Boot</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<startClass>com.dobatii.gworkummymodernjava.DemoApplication</startClass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
		<finalName>gwork</finalName>
	</build>
	
	<repositories>
		<repository>
			<id>spring-milestones</id>
	        <name>Spring Milestones</name>
	        <url>https://repo.spring.io/milestone</url>
	        <snapshots>
	            <enabled>false</enabled>
	        </snapshots>
		</repository>
		<repository>
			<id>repository.springframework.maven.release</id>
	        <name>Spring Framework Maven Release Repository</name>
	        <url>http://maven.springframework.org/milestone/</url>
		</repository>
		<repository>
			<id>org.springframework</id>
        	<url> http://maven.springframework.org/snapshot</url>
		</repository>
		<repository>
			<id>spring-milestone</id>
        	<name>Spring Maven MILESTONE Repository</name>
        	<url>http://repo.spring.io/libs-milestone</url>
		</repository>
		<repository>
			<id>spring-release</id>
        	<name>Spring Maven RELEASE Repository</name>
        	<url>http://repo.spring.io/libs-release</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
		    	<enabled>false</enabled>
		   	</snapshots>
		</pluginRepository>
		
		<pluginRepository>
            <id>spring-snapshots</id>
		   <name>Spring Snapshots</name>
		   <url>https://repo.spring.io/snapshot</url>
		   <snapshots>
		    <enabled>true</enabled>
		   </snapshots>
        </pluginRepository>
	</pluginRepositories>
</project>
